tdf#53431 tdf#136535 Fill change Autofilter

Fill (fill-down, fill-left...) did copy Autofilter cell properties,
creating new-, or destroying old- autofilter buttons.
Added a RefreshAutoFilter after the fill. to repair this.

It will not be slow, because after the fill in the selected area
there will be only 1 ATTR_MERGE_FLAG attribute in every column, therefore
removing and then re-applying autofilter buttons require only
constant number of operations/column (deleting/creating/changing attributes).
Its speed independent from the number of rows.

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: I95d394c5432d22805a761b76219f656fad3feae1